Commit from JBoss Tools

--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -878,3 +878,8 @@ div.rateit div.rateit-reset:hover {
 .rateit {
 	background-color: none;
 }
+.playAll {
+	text-align: center;
+	width: 100%;
+	display: block;
+}
