--- a/src/main/webapp/css/admin.css
+++ b/src/main/webapp/css/admin.css
@@ -12,10 +12,6 @@
   top: 1px;
 }
 
-#adminNav a:hover {
-  border: solid 1px #64006B;
-  box-shadow: grey 0px 2px 5px 0px;
-}
 
 #adminBody form, #adminNav h3 {
   padding: 20px;
@@ -86,12 +82,12 @@
   margin: 0;
   padding: 0;
 }
-#fAlbum select {
+/*#fAlbum select {
   background-color: #A3C6D9;
   color: #fff;
   border: none;
   padding: 5px;
-}
+}*/
 
 #fAlbum #artist {
   width: 190px;
