Commit from JBoss Tools

--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -419,7 +419,7 @@ article p img.coverImage {
 	margin: auto;
 	padding: 20px 30px;
 	font-style: italic;
-	background-color: #62798B;
+	background-color: #222;
 	box-shadow: 1px 1px 1px 1px #ccc;
 	margin-top: 10px;
 	margin-bottom: 20px;
